--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,3 +1,6 @@
+// Include all of Bootstrap
+@import "../node_modules/bootstrap/scss/bootstrap";
+
 .form-check-input{
     margin-right: 15px !important;
 }
